# peanoclaw

./: CMakeLists.txt  SConstruct  setup.py
src/peanoclaw/: Cell.cpp  CellDescription.def  Heap.h  Numerics.cpp  Numerics.h  NumericsFactory.cpp  NumericsFactory.h  Patch.cpp  Patch.h  PeanoClawControlLoopLoadBalancer.cpp  PeanoClawControlLoopLoadBalancer.h  State.cpp  State.h  Vertex.cpp  Vertex.h
src/peanoclaw/configurations/: PeanoClawConfigurationForSpacetreeGrid.cpp  PeanoClawConfigurationForSpacetreeGrid.h
src/peanoclaw/dastgen/: Cell.def  CellDescription.def  LevelStatistics.def  RepositoryState.def  State.def
src/peanoclaw/geometry/: HyperplaneRegion.cpp
src/peanoclaw/grid/: SubgridAccessor.cpp  SubgridAccessor.h  TimeIntervals.cpp  TimeIntervals.h
src/peanoclaw/grid/boundaryConditions/: ExtrapolateBoundaryCondition.h  ExtrapolateBoundaryConditions.cpp  ReflectingBoundaryCondition.cpp  ReflectingBoundaryCondition.h
src/peanoclaw/grid/plotter/: HDF5SubgridPlotter.cpp  VTUSubgridPlotter.cpp  VTUSubgridPlotter.h
src/peanoclaw/interSubgridCommunication/: BathymetryInterpolation.cpp  BathymetryInterpolation.h  BathymetryRestriction.cpp  BathymetryRestriction.h  BathymetryTransformation.cpp  BathymetryTransformation.h  DefaultFluxCorrection.h  DefaultInterpolation.cpp  DefaultInterpolation.cpph  DefaultInterpolation.h  DefaultRestriction.cpph  DefaultRestriction.h  GhostLayerCompositor.cpp  GhostLayerCompositor.h  GhostlayerCompositorFunctors.cpp  GhostlayerCompositorFunctors.h  GridLevelTransfer.cpp  GridLevelTransfer.h  Interpolation.cpp  Interpolation.h  NonOvershootingInterpolation.cpph  NonOvershootingInterpolation.h  Restriction.h
src/peanoclaw/interSubgridCommunication/aspects/: AdjacentSubgrids.cpp  AdjacentVertices.cpp
src/peanoclaw/mappings/: Cleanup.cpp  GatherCurrentSolution.cpp  InitialiseGrid.cpp  InitialiseGrid.h  Plot.cpp  Remesh.cpp  Remesh.h  SolveTimestep.cpp  SolveTimestep.h
src/peanoclaw/native/: BathymetryHelper.cpp  BreakingDam.cpp  BreakingDam.h  FullSWOF2D.cpp  FullSWOF2D.h  MekkaFlood.cpp  MekkaFlood.h  MekkaFlood_solver.cpp  MekkaFlood_solver.h  SWEKernel.cpp  SWEKernel.h  dem.cpp  dem.h  main.cpp  sweMain.cpp
src/peanoclaw/native/scenarios/: BowlOcean.cpp  BowlOcean.h  BreakingDam.cpp  BreakingDam.h  CalmOcean.h  ConstantScenario.h  GEBCO.cpp  GEBCO.h  Gaussian.cpp  Gaussian.h  MekkaFlood.h  SWEScenario.cpp  SWEScenario.h  ShockBubble.cpp  ShockBubble.h  Storegga.cpp  Storegga.h
src/peanoclaw/native/scenarios/swashes/: ChannelPseudo2D.cpp  ChannelPseudo2D.h  SWASHESChannel.cpp  SWASHESParameters.cpp  SWASHESParameters.h
src/peanoclaw/parallel/: MasterWorkerAndForkJoinCommunicator.cpp  MasterWorkerAndForkJoinCommunicator.h  NeighbourCommunicator.cpp  NeighbourCommunicator.h  PeanoClawControlLoopLoadBalancer.h  SubgridCommunicator.cpp  SubgridCommunicator.h  TreeAwareNodePoolStrategy.cpp  TreeAwareNodePoolStrategy.h
src/peanoclaw/pyclaw/: PyClaw.cpp  PyClawState.cpp  RestrictionCallbackWrapper.cpp  RestrictionCallbackWrapper.h  pyclawBindings.cpp
src/peanoclaw/records/: Cell.cpp  Cell.h  CellDescription.cpp  CellDescription.h  Data.cpp  Data.h  DoubleData.cpp  DoubleData.h  FloatData.cpp  FloatData.h  PatchDescription.cpp  PatchDescription.h  RepositoryState.cpp  RepositoryState.h  State.cpp  State.h  Vertex.cpp  Vertex.h  VertexDescription.cpp  VertexDescription.h
src/peanoclaw/repositories/: Repository.h  RepositoryArrayStack.cpp  RepositoryArrayStack.h  RepositorySTDStack.cpp  RepositorySTDStack.h
src/peanoclaw/runners/: PeanoClawLibraryRunner.cpp  PeanoClawLibraryRunner.h
src/peanoclaw/solver/euler3d/: Euler3DKernel.cpp  Euler3DKernel.h  SchemeExecutor.cpp
src/peanoclaw/solver/fullswof2D/: FluxCorrection.cpph  FluxCorrection.h
src/peanoclaw/statistics/: LevelStatistics.cpp  LevelStatistics.h  Probe.cpp  ProcessStatisticsEntry.cpp  ProcessStatisticsEntry.h  SubgridStatistics.cpp  SubgridStatistics.h  TimeIntervalStatistics.cpp  TimeIntervalStatistics.h
src/peanoclaw/tests/: GhostLayerCompositorTest.cpp  GhostlayerExtrapolationTest.cpp  GhostlayerExtrapolationTest.h  GridLevelTransferTest.cpp  PatchTest.cpp  PatchTest.h  PeanoClawTest.cpp  PeanoClawTest.h  StatisticsTest.cpp  StatisticsTest.h
src/python/peanoclaw/: peano.py  solution.py
testscenarios/breakingDam/: shallow2D.py
testscenarios/shockbubble3d/: shockbubble.py
tools/: buildtools.py  parseParallelStatistics.py
tools/ControlLoopLoadBalancer/ControlLoopLoadBalancer/: OracleForOnePhaseControlLoopWrapper.cpp  OracleForOnePhaseControlLoopWrapper.h
tools/RMK/: MeshCommunication.cpp  MeshCommunication.cpph  MeshCommunication.h  Serialization.cc  Serialization.h  SerializationMap.cc  SerializationMap.h  peano1826RMKPatch.diff  peanoclaw_serialization.patch
tools/peanoSrc/: LoadVertexLoopBody.cpph  LoadVertexLoopBody.h  StoreVertexLoopBody.cpph
